public/css/forum.css
/* ... */
#ajax_errs .error {
    float:none;
    margin: 10px 0;
    color:red;
    border: 0px;
}

#ajax_errs {
	border-bottom:1px dotted #959595;
}

@media screen and (max-width: 600px) {
#ad-space { display:none; }
#left-column { position:relative; width: 100%; top:0px; left: 0px;}
#right-column { margin: 0; padding: 0px; }
#header { width: auto; margin-bottom: 0px; }
#logout_btn { padding: auto; border: auto; }
.comment { clear: both; }
#main-title { overflow: auto; height: auto; margin-bottom: 0px; }
.two { display:none; float:none; }
.thread .three { clear: left; width: auto; }
.three .username, .three .time { float:none; display: inline; line-height: 16px; }
.thread .one { width: 90%; float:none; }
.thread .subject { margin: 0px; white-space: nowrap; overflow:hidden; }
.welcome { padding: 5px; border: 0px;}
.pagination .paging-text { display: none; }
#post-thread, a#post-thread:hover { margin: 7px 2px 2px 2px; padding: 2px; }
 * { margin: 0px; padding: 0px; }

body {
}

body, div, td, input, select, textarea {
    font-family: Arial;
    color: #494949;
    font-size:16px;
}

h1 {
    margin-bottom:20px;
}

input {
    font-size:16px;
}

a {
    text-decoration: none;
    color:#494949;
    outline:none;
}

#wrapper {
    overflow:auto;
    padding-bottom:20px;
}

#secluded-login {
    padding:20px;
}

#secluded-login label {
    display: block;
    margin-bottom:10px;
}

.welcome {
    position:absolute;
    top:5px;
    right:5px;
}

#jumpdown {
    position:absolute;
    top:5px;
    right:86px;
    background: #444;
    color:#EEE;
    font-size:12px;
    /* border: 1px solid #AAA; */
    display: block;
    padding: 4px 6px;
    margin:8px;
    border-radius:5px;
    -moz-border-radius:5px;
}

.thread, .comment {
    overflow:auto;
    position:relative;
    padding:5px 10px;
}

.comment {
    border-bottom: 1px solid #ACE1F9;
}

.comment.later-comment {
    margin-top:-2px;
}

.comment.later-comment .comment-container {
    text-align:center;
    font-size:9px;
    padding:2px;
    color:#000;
    background:#EEE;
}

.blueline {
    background-color: #ACE1F9;
    height: 1px;
    overflow: hidden;
    clear: both;
}

.subject-text {
    font-size: 18px;
    font-weight:bold;
}
.subject {
    margin: 0 25px 3px 0;
}
.username, .two {
    float:left;
}

.two {
    width: 140px;
}
.two .username:before {
    content: "By: ";
}
.three .username:before {
    content: "Last: ";
}
.three .username:after, .two .username:after {
    content: ", ";
}

.two div, .three div {
    font-size:11px;
}
.two div, .three div, .two a, .three a {
    color:#999;
}

.four {
    position:absolute;
    top: 15px;
    right:10px;
}

.user-block .username a {
    font-weight:bold;
}
.user-block {
    overflow:auto;
}
.user-block .time {
    margin-top:4px;
    font-size:12px;
    color:#999;
}
.username {
    margin-right:2px;
}
.comment .content {
    padding: 5px 0 0 0;
}
.secluded-input {
    margin-bottom: 20px;
}
#thread form {
    margin: 10px;
}
#thread form textarea {
    margin-bottom:10px;
}

#thread img{
    max-width: 100%;
    height: auto;
}

.content-block a{
    text-decoration: underline;
}

.pagination.bottom {
    padding:10px 0 10px 10px;
}

#header {
    background:#EDF5E1 url(/img/logo.gif) no-repeat 10px center;
    text-indent: -9999px;
    display:block;
    padding:10px;
    font-size: 24px;
    border-bottom:1px solid #DCD4C9;
}

#threads, .welcome {
    overflow:auto;
}
#threads li, .welcome li {
    float:left;
    list-style:none;
}
#threads li a, .welcome li a {
    background: #444;
    color:#EEE;
    font-size:12px;
    /* border: 1px solid #AAA; */
    display: block;
    padding: 4px 6px;
    margin:8px;
    border-radius:5px;
    -moz-border-radius:5px;
}
.main-pagination {
    overflow:auto;
}
.main-pagination a, .main-pagination div {
    background: none repeat scroll 0 0 #FFFFFF;
    border: 1px solid #999;
    display: block;
    padding: 5px 8px;
    float:left;
    margin-right:10px;
}
.main-pagination div {
    background: #666;
}

#post-thread {
    display:block;
    font-weight:bold;
    text-decoration:underline;
}

#new-thread form input[type="submit"] {
    margin-left:10px;
}

.inp {
    padding:10px;
}
label { display:block; margin-bottom:5px; font-weight:bold;}

#category-selector {
    overflow:auto;
}
#category-selector input {
    display:block;
    float:left;
    width: 15px;
    padding-top:5px;
    margin-right:10px;
    height:20px;
}
#category-selector label {
    display:block;
    float:left;
    width: 60px;
    padding-bottom:15px;
    margin-right:50px;
    font-weight:normal;
}

#reply-lc { padding-left:10px; }

#main-title {
    display:none;
}
#thread #main-title {
    display:block;
    padding:10px 10px;
    text-align:center;
    background:#eee;
    border-bottom: 1px solid #ACE1F9;
}

#stats {
    padding:10px;
}

form .input.textarea textarea {
padding: 0px;
}

#thread-content-input {
    height:120px;
}

.cmd-bar {
    float:right;
    font-size: 10px;
}

.quote { margin-left: 20px;}

.content textarea {
    height:200px;
    width:300px;
    display:block;
}

#reply-rc { margin-left: 0px; background:none; width: auto; }

.comment .user-block, .test-comment .user-block {
    float:none;
    width: auto;
    margin-top: 0px;
}

.comment .content-block, .test-comment .content-block {
    margin: 0px;
}

#secluded-invite, #messaging, #buddy-list,
#thread-headers, .thread .category, .fourr, .five,
#special-threads, .user-information,
#thread-control, #threads h3, .welcome h4, .welcome > a,
.welcome ul li:first-child, .paging-text, #threads, #new-thread p:first-child,
#post-shortcuts, #pinkies, #reply-lc, #reply-rc p, #this-is-you, #information, #stats h3,
#information-bio, #information-desc, #information-widget, #photostream,
#latest-posts, #latest-posts-withflickr, #show_mobile, #pobf {
    display:none;
}

}
/* ... */

